--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,13 +13,18 @@
     <string name="auth_activity_login_welcome_back_text">Welcome Back</string>
     <string name="auth_activity_login_login_welcome_text">I am happy to see you again. You can login for more features.</string>
     <string name="auth_activity_login_kindly_register_text">Kindly register to continue for more features.</string>
-    <string name="auth_activity_login_email_username_text">Email/Username</string>
+    <string name="auth_activity_login_email_username_text">Email</string>
     <string name="auth_activity_login_password_text">Password</string>
+    <string name="auth_activity_login_successful_text">Login successful!</string>
+    <string name="auth_activity_login_failed_text">Login failed! Please try again later</string>
 
     <!--Authentication Options Activity - sign up-->
     <string name="auth_activity_sign_up_email_text">Email</string>
-    <string name="auth_activity_sign_up_username_text">Username</string>
     <string name="auth_activity_sign_up_password_text">Password</string>
+    <string name="auth_activity_sign_up_email_error_text">Invalid email format</string>
+    <string name="auth_activity_sign_up_password_error_text">Password must contain at least one special character, one letter and one number, 8–16 length</string>
+    <string name="auth_activity_sign_up_successful_text">Registration successful!</string>
+    <string name="auth_activity_sign_up_failed_text">Registration failed! Please try again later</string>
 
     <!--Movie List Activity-->
     <string name="movie_list_activity_search_movie_text">Search Movie</string>
